k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework1
  template:
    metadata:
      labels:
        app: homework1
    spec:
      containers:
        - name: homework1
          image: "vlrybkin/otus:homework1_1.7"
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
