k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework1-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: homework1
